Implementacion de semana 3
