# src/main/java/com/enoc/transaction/model/Transaction.java
@@ -1,5 +1,8 @@
 package com.enoc.transaction.model;
 
+import com.enoc.transaction.enums.StatusEnum;
+import com.enoc.transaction.enums.TransactionOrigin;
+import com.enoc.transaction.enums.TransactionType;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import lombok.*;
@@ -18,6 +21,9 @@ public class Transaction {
     private String id;
     private String customerId;
     private String productId;
+    private String accountId;
+    private String operationTypeId;
+    private LocalDateTime eventDate;
     private String destinationAccountId;
     private TransactionType type;
     private TransactionOrigin origin;
@@ -25,21 +31,8 @@ public class Transaction {
     private BigDecimal commissionApplied;
     private LocalDateTime date;
     private String description;
+    private StatusEnum status;
 
-    public enum TransactionType {
-        DEPOSIT,
-        WITHDRAWAL,
-        PAYMENT,
-        CREDIT_CHARGE,
-        TRANSFER_INTERNAL,
-        TRANSFER_EXTERNAL
-
-    }
-
-    public enum TransactionOrigin {
-        INTERNAL,
-        EXTERNAL
-    }
 
 }
 
